--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "vue-select": "^3.1.0",
     "vue-simple-calendar": "^4.2.2",
     "vue-simple-suggest": "^1.9.5",
+    "vue-snowf": "0.0.2",
     "vue-star-rating": "^1.6.1",
     "vue-sticky": "^3.3.4",
     "vue-tour": "^1.1.0",
