--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "vue2-hammer": "^2.1.2",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuedraggable": "^2.21.0",
+    "vuejs-countdown-timer": "^2.1.3",
     "vuejs-datepicker": "^1.5.4",
     "vuesax": "jd-0001/vuesax",
     "vuex": "^3.1.1",
