--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "vue-html2canvas": "0.0.4",
     "vue-i18n": "^8.11.2",
     "vue-instantsearch": "^2.2.1",
+    "vue-json-csv": "^1.2.12",
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-prism-component": "^1.1.1",
     "vue-progress-button": "^1.3.0",
