--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "instantsearch.css": "^7.3.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.3.0",
+    "jspdf-autotable": "^3.5.13",
     "material-icons": "^0.3.1",
     "node-telegram-bot-api": "^0.51.0",
     "perfect-scrollbar": "^1.4.0",
