--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jspdf-autotable": "^3.5.13",
     "material-icons": "^0.3.1",
     "node-telegram-bot-api": "^0.51.0",
+    "pdfvuer": "^1.7.5",
     "perfect-scrollbar": "^1.4.0",
     "postcss-rtl": "^1.5.0",
     "prismjs": "^1.16.0",
